--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <input type="password" placeholder="Password" />
             </div>
           </div>
-
+          <p><a href="availability.html"> Continue</a></p>
           <div class="btn-field">
             <button type="'button" id="signupBtn">Sign Up</button>
             <button type="button" id="signinBtn" class="disable">
