--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <form>
           <div class="input-group">
             <div class="input-field" id="nameField">
-              <input type="text" placeholder="Full Name" />
+              <input type="text" placeholder="Full Name" required />
             </div>
 
             <div class="input-field" id="numberField">
-              <input type="number" placeholder="Phone Number" />
+              <input type="tel" placeholder="Phone Number" required />
             </div>
 
             <div class="input-field">
-              <input type="email" placeholder="VT Email" />
+              <input type="email" placeholder="VT Email" required />
             </div>
 
             <div class="input-field">
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password" required />
             </div>
           </div>
           <p><a href="availability.html"> Continue</a></p>
