--- a/report.html
+++ b/report.html
@@ -18,12 +18,41 @@
       </ul>
     </nav>
 
-    <main>
-      <h3>
-        If you would like to report an incident, please use the form below.
-      </h3>
-      <p>We will try to resolve the issue as soon as possible.</p>
-      <a href="https://forms.gle/p75orxTcG44KM75b9"> Incident Report Form</a>
-    </main>
+    <div class="container">
+      <div class="form-box">
+        <h1 id="title">Incident Report Form</h1>
+        <form>
+          <div class="input-group">
+            <div class="input-field" id="nameField">
+              <input type="text" placeholder="Full Name" required />
+            </div>
+
+            <div class="input-field">
+              <input type="email" placeholder="VT Email" required />
+            </div>
+          </div>
+
+          <div class="btn-field">
+            <button type="'submit" id="submit">Submit</button>
+          </div>
+        </form>
+
+        <div class="wrapper">
+          <textarea
+            placeholder="Please describe the nature of the incident."
+            required
+          ></textarea>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const textarea = document.querySelector("textarea");
+      textarea.addEventListener("keyup", (e) => {
+        textarea.style.height = "63px";
+        let scHeight = e.target.scrollHeight;
+        textarea.style.height = `${scHeight}px`;
+      });
+    </script>
   </body>
 </html>
